Adding logged out tongue. Adding better shadow under nav. More boxing and breadcrumbing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,7 +113,6 @@ a.button:hover { color: white; }
 .form_row label {
     font-family: helvetica;
     font-size: 12px;
-    color: #C1C1C1;
     position: absolute;
     top: 0;
     left: 0; }
@@ -128,6 +127,7 @@ a.button:hover { color: white; }
     font-style: normal;
     font-size: 16px;
     position: absolute;
+    color: #C1C1C1;
     top: 31px;
     left: 11px;}
 
@@ -270,7 +270,7 @@ Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Footer Foo
 	height:286px;
     background: #92c139 url(../images/theme/0000000001_footer.png) no-repeat top center; }
 #footer{position:relative;}
-#footer_copy a {color:#333}
+#footer_copy a {color:#333; text-decoration:underline;}
 #footer_copy {margin-right:100px; text-align:center; padding-top:250px;}
 
 
@@ -315,32 +315,26 @@ Homepage-Minor-Col Homepage-Minor-Col Homepage-Minor-Col Homepage-Minor-Col Home
 Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue Tongue 
 --------------------------------------------------------------------------------------------------------------------- */
 #tongue, #tongue_signup { 
-    color: #FFF;
-    font-size:11px;
+    font-size:12px;
     background: #6EC3D1 url(../images/theme/0000000001_sprite_minor_col.png) repeat-x 0px -416px; 
     margin-top:-3px;
     margin-bottom:20px;
-    padding: 28px 12px 20px 12px;
-    -moz-border-radius-bottomleft: 8px; -webkit-border-bottom-left-radius: 8px; border-bottom-left-radius: 8px; -moz-border-radius-bottomright: 8px; -webkit-border-bottom-right-radius: 8px; border-bottom-right-radius: 8px; }
+    padding: 18px;
+    -moz-border-radius-bottomleft: 18px; -webkit-border-bottom-left-radius: 18px; border-bottom-left-radius: 18px; -moz-border-radius-bottomright: 18px; -webkit-border-bottom-right-radius: 18px; border-bottom-right-radius: 18px; }
+#tongue a {color: #FFF;}
 /* logged in tongue */
-#tongue_username {font-size: 20px; font-weight:bold; margin-top:4px; }
-#tongue_username a {text-decoration:none !important;}
+#tongue .gravatar {margin-bottom:18px;}
+#tongue_username {font-size: 18px; font-weight:bold; }
 #tongue_location span{ margin-bottom:-5px;}
-#tongue_location {font-size:15px; white-space:nowrap;}
-#tongue_links {margin:10px 0px;}
-#tongue a {color: #FFF; text-decoration:underline;}
-#tongue_points { font-size: 72px; font-weight:bold; margin:30px 0px;}
-#tongue_points span { font-size: 22px; font-weight:bold;}
+#tongue_location {font-size:12px; white-space:nowrap; overflow:hidden;}
+#tongue_points { font-size: 72px; line-height: 54px; margin-top:12px; font-weight:bold; color: #FFF;}
+#tongue_points span { font-size: 18px; font-weight:bold;}
 #tongue_activity {border-top:1px solid #92d2dd;}
-/* Signup Tongue */
-#tongue_signup { background: #e5f1fa; margin-top:0px; margin-bottom:20px; }
-#tongue_signup #registration_form {margin:0px;}
-#tongue_signup #registration_form input { width:192px; padding:3px 10px; font-size:11px;}
-#tongue_signup #registration_form .inside{font-size:11px; top:17px; color:#C1C1C1;}
-#tongue_signup #registration_form .overset{padding: 15px 0 0 0; }
-#tongue_signup #registration_form label{color:#FFF;}
-#tongue_signup #registration_form #register_submit{ margin-top:12px; font-size:14px; width:100%;}
-#tongue_signup #registration_form h1{ color:#172950; }
+
+/* logged out tongue */
+#tongue #id_password, #tongue #id_email {width:167px;}
+#tongue .form_row {padding-bottom:6px;}
+#tongue_login_form_submit {margin-top:12px;}
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart Chart 
