--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,11 @@
 {% extends "rah/base.html" %}
+{% block tongue %}{% endblock tongue %}
+{% block breadcrumbs %}
+ <div class="prefix_3">
+    <a href="{% url index %}">Home</a> &rsaquo;
+    Reset password
+</div>
+{% endblock %}
 {% block right_content %}
 <div class="prefix_3">
     <div class="box_two_top"></div>
@@ -9,8 +16,8 @@
             <p><input type="submit" value="Reset password" /></p>
             {% csrf_token %}
         </form>
-        <a href="{% url django.contrib.auth.views.login %}">Log in</a> | 
-        <a href="{% url rah.views.register %}">Register</a>
+        <a href="{% url django.contrib.auth.views.login %}">Log in</a> or
+        <a href="{% url rah.views.register %}">Sign up</a>
     </div>
     <div class="box_two_bottom"></div>
 </div>
