--- a/templates/base.html
+++ b/templates/base.html
@@ -49,12 +49,12 @@
                         </div>
                     {% else %}
                         <div id="nav_logged_out" class="nav">
-                            <a href="{% url login %}?next={{ request.path }}" id="nav_login">Login</a>
+                            {# <a href="{% url login %}?next={{ request.path }}" id="nav_login">Login</a> #}
                             <a href="{% url index %}" id="nav_home">Home</a>
                             <a href="{% url action_show %}" id="nav_actions">Actions</a>
                             <a href="{% url group_list %}" id="nav_teams">Teams</a>
                             <a href="{% url blog_index %}" id="nav_blog">Blog</a>
-                            <a href="{% url register %}" id="nav_signup">Sign Up</a>
+                            {# <a href="{% url register %}" id="nav_signup">Sign Up</a> #}
                         </div>
                     {% endif %}
                 </div>
@@ -67,11 +67,7 @@
                         {% block content %}
                             <div class="grid_3 alpha">
                                 {% block tongue %}
-                                    {% if request.user.is_authenticated %}
-                                        {% with request.user.get_profile as profile %}
-                                            {% include "rah/_tongue.html" %}
-                                        {% endwith %}
-                                    {% endif %}
+                                    {% include "rah/_tongue.html" %}
                                 {% endblock tongue %}
                                 {% block left_sidebar %}{% endblock left_sidebar %}
                             </div>
