--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,10 +1,24 @@
 {% extends "rah/base.html" %}
-{% block content %}
-    <form id="password_change_form" action="" method="post" autocomplete="false">
-        {% include "rah/_overset_form.html" %}
-        <p><input type="submit" value="Submit" /></p>
-        <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
-        {% csrf_token %}
-    </form>
+{% block tongue %}{% endblock tongue %}
+{% block breadcrumbs %}
+ <div class="prefix_3">
+    <a href="{% url index %}">Home</a> &rsaquo;
+    Change your password
+</div>
+{% endblock %}
+{% block right_content %}
+<div class="prefix_3">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <h1>Change your password</h1>
+        <form id="password_change_form" action="" method="post" autocomplete="false">
+            {% include "rah/_overset_form.html" %}
+            <p><input type="submit" value="Submit" /></p>
+            <p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
+            {% csrf_token %}
+        </form>
+    </div>
+    <div class="box_two_bottom"></div>
+</div>
 {% endblock %}
 {% block js %}page_password_change{% endblock %}
