--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,13 +1,27 @@
 {% extends "rah/base.html" %}
-{% block content %}
-    {% if form %}
-        <form id="password_reset_confirm" action="" method="post" autocomplete="false">
-            {% include "rah/_overset_form.html" %}
-            <p><input type="submit" value="Reset password" /></p>
-            {% csrf_token %}
-        </form>
-    {% else %}
-        <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
-    {% endif %}
+{% block tongue %}{% endblock tongue %}
+{% block breadcrumbs %}
+ <div class="prefix_3">
+    <a href="{% url index %}">Home</a> &rsaquo;
+    Reset password
+</div>
+{% endblock %}
+{% block right_content %}
+<div class="prefix_3">
+    <div class="box_two_top"></div>
+    <div class="box_two_middle">
+        <h1>Reset Password</h1>
+        {% if form %}
+            <form id="password_reset_confirm" action="" method="post" autocomplete="false">
+                {% include "rah/_overset_form.html" %}
+                <p><input type="submit" value="Reset password" /></p>
+                {% csrf_token %}
+            </form>
+        {% else %}
+            <p>This link is no longer valid, please request a new <a href="{% url password_reset %}">password reset</a>.</p>
+        {% endif %}
+    </div>
+    <div class="box_two_bottom"></div>
+</div>
 {% endblock %}
 {% block js %}page_password_reset_confirm{% endblock %}
