--- a/events/templates/events/_rsvp_form.html
+++ b/events/templates/events/_rsvp_form.html
@@ -1,5 +1,7 @@
-<form id="rsvp_form" action="{% url event-rsvp %}" method="post">
+<form id="rsvp_form" action="{% url event-rsvp event.id %}" method="post">
+    {{ rsvp_form.errors }}
     <p>{{ rsvp_form.rsvp_status }}</p>
+    <p>{{ rsvp_form.token }}</p>
     {% csrf_token %}
     <input type="submit" value="Submit" />
 </form>
